rspec-tools/tests/resources/invalid-asciidoc/vscode_ifdef.adoc
Some content followed by an ifdef

ifdef::env-github,rspecator-view,env-vscode[]

This ifdef is wrong because we add vscode flags in it

endif::env-github,rspecator-view,env-vscode[]
